--- a/Exemple d'utilisation de quickflip/index.html
+++ b/Exemple d'utilisation de quickflip/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr">
 <head profile="http://gmpg.org/xfn/11">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>jQuery Flipping Content Tabs - Web Developer Plus Demos</title>
+<title>jQuery Flipping Content Tabs</title>
 <script type="text/javascript" src="js/jquery-1.3.2.js" ></script>
 <script type="text/javascript" src="js/jquery.quickflip.js" ></script>
 <link rel="stylesheet" type="text/css" href="./styles.css" />
@@ -69,10 +69,4 @@
 		
 </div>
 
-<div style="font-family:Arial, sans-serif; font-size:12px; color:#666; line-height:30px; margin-top:300px;" >
-<hr />
-<p>
-Demo Provided By: <a href="http://webdeveloperplus.com" title="Web Developer Plus - Ultimate Web Development & Design Resource" >Web 
-Developer Plus</a></p>
-</div>
 </body>
